--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ debugpy==1.8.7
 decorator==5.1.1
 executing==2.1.0
 Flask==3.0.3
+Flask-Cors==5.0.0
 flatbuffers==24.3.25
 fonttools==4.54.1
 gast==0.6.0
@@ -55,6 +56,7 @@ pure_eval==0.2.3
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pyzmq==26.2.0
 requests==2.32.3
 rich==13.9.4
